--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
 :root{
   --header-height: 3rem;
-  --nav-width: 200px;
+  --nav-width: 250px;
   --first-color: #062280;
   --first-color-light: #6BADEB;
   --white-color: #F7F6FB;
@@ -29,35 +29,32 @@ a{
 }
 
 .header{
-  width: 100%;
+  width: calc(100% - var(--nav-width));
   height: var(--header-height);
   position: fixed;
-  top: 0;left: 0;
+  top: 0;
+  left: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 1rem;
   background-color: var(--white-color);
-  z-index: var(--z-fixed);
-  transition: .5s
+  z-index: -2;
+  transition: .5s;
+  padding-left: -250px;
 }
 
-.header_toggle{
-  color: var(--first-color);
-  font-size: 1.5rem;
-  cursor: pointer
-}
-
-.header_img{width: 35px;
+.header_img{
+  width: 35px;
   height: 35px;
   display: flex;
-  justify-content: center;
+  justify-content: end;
   border-radius: 50%;
   overflow: hidden
 }
 
 .header_img img{
-  width: 40px
+  width: 40px;
 }
 
 
@@ -70,7 +67,10 @@ a{
   
   .header{
     height: calc(var(--header-height) + 1rem);
-    padding: 0 2rem 0 calc(var(--nav-width) + 2rem)
+    padding: 0 2rem 0 calc(var(--nav-width) + 2rem);
+    z-index: 1;
+    width: calc(100% - var(--nav-width));
+    margin-left: 250PX;
   }
   
   .header_img{
@@ -101,8 +101,8 @@ a{
 .sidenav {
   position: fixed;
   height: 100%;
-  width: 200px;
-  z-index: 1;
+  width: var(--nav-width);
+  z-index: 100;
   top: 0;
   left: 0;
   background-color: #111;
@@ -114,6 +114,7 @@ a{
 /* Style the sidenav links and the dropdown button */
 .sidenav a, .dropdown-btn {
   padding: 6px 8px 6px 16px;
+  margin: 6px;
   text-decoration: none;
   font-size: 20px;
   color: #818181;
@@ -157,5 +158,23 @@ a{
   padding-right: 8px;
 }
 
+/* Posicionar el span en el centro horizontal */
+.centered-span {
+  position: fixed;
+  top: 1%; /* Posicionar el elemento en el 50% superior de la pantalla */
+  left: 50%; /* Posicionar el elemento en el 50% izquierdo de la pantalla */
+  transform: translateX(-50%); /* Desplazar el elemento hacia la izquierda un 50% de su ancho */
+  /* background-color: #fff;  *//* Estilos adicionales... */
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+}
 
+.centered-img {
+  position: fixed;
+  top: 1%; /* Posicionar el elemento en el 50% superior de la pantalla */
+  left: 95%; /* Posicionar el elemento en el 50% izquierdo de la pantalla */
+  /* background-color: #fff;  *//* Estilos adicionales... */
+  display: flex;
+}
   
