--- a/css/modal.css
+++ b/css/modal.css
@@ -69,3 +69,11 @@
       width: 100%;
     }
   }
+
+
+  .center-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Establece la altura del contenedor para centrar verticalmente */
+  }
