Sidebar icons / probando switch

--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,7 @@
 
 section {
     margin: 0 auto;
-    max-width: 1200px; /* Ancho máximo del contenido dentro de la sección */
+    max-width: 1200px; 
   }
 
   .container-fluid {
